--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.application.name=thisBetterWork
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Pluem2004!
-spring.datasource.url=jdbc:mysql://localhost:3306/producttest
+spring.datasource1.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource1.username=root
+spring.datasource1.password= ******
+spring.datasource1.url=jdbc:mysql://localhost:3306/producttest
 
+#second db ...
+spring.datasource2.url = jdbc:mysql://localhost:3306/usertest
+spring.datasource2.username = root
+spring.datasource2.password = ******
+spring.datasource2.driverClassName = com.mysql.cj.jdbc.Driver
 
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
